force-app/main/default/objects/Lead/fields/Lead_Quality__c.field-meta.xml
<CustomField>
    <fullName>Lead_Quality__c</fullName>
    <formula>CASE( Lead_Quality_Helper__c , 1,  IMAGE(&quot;/img/samples/stars_100.gif&quot;, &apos;1 star&apos;),
 2, IMAGE(&quot;/img/samples/stars_200.gif&quot;, &apos;2 star&apos;),
 3, IMAGE(&quot;/img/samples/stars_300.gif&quot;, &apos;3 star&apos;),
 4, IMAGE(&quot;/img/samples/stars_400.gif&quot;, &apos;4 star&apos;),
 5, IMAGE(&quot;/img/samples/stars_500.gif&quot;, &apos;5 star&apos;),
 IMAGE(&quot;/img/samples/stars_000.gif&quot;, &apos;0 star&apos;))</formula>
    <label>Lead Quality</label>
    <type>Text</type>
</CustomField>