force-app/main/default/objects/Lead/fields/WebToLeadCampaignId__c.field-meta.xml
<CustomField>
    <fullName>WebToLeadCampaignId__c</fullName>
    <label>WebToLeadCampaignId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>